# YouBot_RW

./: .gitignore
V-RepScenes/: youbot_scence.ttt  youbot_test_scence.ttt
material/: YouBot_RW-Concept.txt
material/SDIR_CODE/src/Kinematics/: KinematicFunctions.py  __init__.py
material/SDIR_Material/SDIR_CODE/src/Kinematics/: GUI.py  MotionFunctions.py
material/SDIR_Material/SDIR_Praesi_und_Skript/Program Task 1/Vorträge/: singularities - 2ter_vortrag_-_19112013.pptx
material/SDIR_Material/SDIR_Praesi_und_Skript/Program Task 2/Literatur/: OpenRave LInk.txt
material/SDIR_Material/SDIR_Praesi_und_Skript/Program Task 2/Präsentation/: Movement on Spline Curves.pptx
material/SDIR_Material/SDIR_Praesi_und_Skript/Präsentationen/: SplineMovement.ppsm
material/SDIR_Material/SDIR_Praesi_und_Skript/Vortrag 1 - Locomotion/locomotion/: bookmarks.txt
material/SDIR_Material/SDIR_Praesi_und_Skript/Vortrag 2 - Rückwärtskinematik/: Inverse Kinematics for Kuka KR30.pptx
material/SDIR_Praesi_und_Skript/: desktop.ini
material/SDIR_Praesi_und_Skript/Code-Präsentation/: CodePresentation01.pptx  GrobstrukturCode.graphml
material/SDIR_Praesi_und_Skript/Program Task 1/: readme.txt
material/SDIR_Praesi_und_Skript/Program Task 1/SDIR_src/: launchEnv.py  readme.txt  testcode.py
material/SDIR_Praesi_und_Skript/Program Task 2/Präsentation/: SplineMovement.pptx
material/SDIR_Praesi_und_Skript/Präsentationen/: CodePresentation01.ppsm  SplineMovement.pptx
material/SDIR_Praesi_und_Skript/Vorlesungsskript/: sdir-vorlesung-1.pptx
material/SDIR_Praesi_und_Skript/Vortrag 1 - Locomotion/locomotion/: Content.doc
material/SDIR_Praesi_und_Skript/Vortrag 2 - Rückwärtskinematik/Literatur/: vidz-links.txt
material/YouBot_RW_Material/: FINAL_TODOs.txt  Features4Holidays.txt  YouBot_RW-Concept.txt
material/YouBot_RW_Material/Buchstaben_Datenbank/: letter_database.xml
workspace/: .cproject  .gitignore
workspace/src/: .gitignore  youbot_rw.doxyfile
workspace/src/rqt_bag_test/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
workspace/src/rqt_bag_test/scripts/: rqt_bag_test
workspace/src/vrep_common/: CMakeLists.txt  package.xml
workspace/src/vrep_plugin/: CMakeLists.txt  package.xml
workspace/src/vrep_plugin/include/: .gitignore  v_repConst.h  v_repLib.h  v_repTypes.h
workspace/src/youbot_arm_kinematics/: CMakeLists.txt
workspace/src/youbot_arm_kinematics/common/src/: inverse_kinematics.cpp  test.cpp
workspace/src/youbot_rw_launch/: CMakeLists.txt  package.xml  youbot_rw.launch  youbot_rw_node_params.yaml
workspace/src/youbot_rw_node/: CMakeLists.txt  package.xml  setup.py
workspace/src/youbot_rw_node/scripts/youbot_rw_node/: KinematicFunctions.py  MotionFunctions.py  kinematics.py  kinematics_base.py  kinematics_geom.py  kinematics_new.py  kinematics_new_old.py  kinematics_nummeric.py  plott.py  status_intf.py  sync.py  testKinc.py  (+3 more)
workspace/src/youbot_rw_rqt_gui/: .gitignore  CMakeLists.txt  package.xml  plugin.xml  setup.py
workspace/src/youbot_rw_rqt_gui/msg/: rw_node.msg  rw_node_state.msg
workspace/src/youbot_rw_rqt_gui/resource/: YouBotGui_widget.ui
workspace/src/youbot_rw_rqt_gui/scripts/: youbot_rw_rqt_gui
workspace/src/youbot_rw_rqt_gui/src/youbot_rw_rqt_gui/: gui_widget.py  my_module.py  status_intf.py  vrep_controll.py
(+1 files in other folders)
