<?xml version="1.0"?>
<package>
  <name>vrep_common</name>
  <version>0.0.0</version>
  <maintainer email="viki@todo.todo">viki</maintainer>
  <description>The vrep_common package</description>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/vrep_common</url>
  <author>marc</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>