<package>
  <name>youbot_rw_rqt_gui</name>
  <version>0.0.1</version>
  <description>The youbot_rw_rqt_gui package</description>

  <maintainer email="marcel.grotzke@st.ovgu.de">Marcel Grotzke</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
<!--  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend> -->
  
  <run_depend>python-rospkg</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend version_gte="0.2.12">rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  
  <run_depend>rqt_gui</run_depend>

  <export>   
    <rqt_gui plugin="${prefix}/plugin.xml"/>    
  </export>
</package>